Added report for specific maintenance record category

--- a/frontend/src/i18n/ar.json
+++ b/frontend/src/i18n/ar.json
@@ -176,7 +176,8 @@
     "avgCostPerCar": "متوسط التكلفة لكل سيارة",
     "monthly": "التفصيل الشهري",
     "byMake": "حسب الماركة",
-    "noData": "لا توجد بيانات متاحة"
+    "noData": "لا توجد بيانات متاحة",
+    "allCategories": "جميع الفئات"
   },
   "messages": {
     "carAdded": "تم إضافة السيارة بنجاح",
