--- a/frontend/src/i18n/en.json
+++ b/frontend/src/i18n/en.json
@@ -18,6 +18,7 @@
     "cars": "Cars",
     "maintenance": "Maintenance",
     "reports": "Reports",
+    "expenses": "Dealership Expenses",
     "settings": "Settings"
   },
   "dashboard": {
@@ -121,7 +122,9 @@
     "filtered": "filtered",
     "from": "from",
     "first": "First",
-    "last": "Last"
+    "last": "Last",
+    "all": "All",
+    "required": "is required"
   },
   "status": {
     "in_stock": "In Stock",
@@ -184,6 +187,51 @@
     "noData": "No data available",
     "allCategories": "All Categories"
   },
+  "expenses": {
+    "title": "Dealership Expenses",
+    "addExpense": "Add Expense",
+    "editExpense": "Edit Expense",
+    "deleteExpense": "Delete Expense",
+    "category": "Category",
+    "amount": "Amount",
+    "description": "Description",
+    "date": "Date",
+    "recurring": "Recurring",
+    "frequency": "Frequency",
+    "monthly": "Monthly",
+    "quarterly": "Quarterly",
+    "annually": "Annually",
+    "oneTime": "One-time",
+    "totalThisMonth": "Total This Month",
+    "recurringMonthly": "Recurring Monthly",
+    "summary": "Summary",
+    "filters": "Filters",
+    "dateRange": "Date Range",
+    "startDate": "Start Date",
+    "endDate": "End Date",
+    "allCategories": "All Categories",
+    "recurringOnly": "Recurring Only",
+    "oneTimeOnly": "One-time Only",
+    "noExpenses": "No expenses found",
+    "type": "Type"
+  },
+  "settings": {
+    "title": "Settings",
+    "expenseCategories": "Expense Categories",
+    "addCategory": "Add Category",
+    "newExpenseCategory": "New Expense Category",
+    "editCategory": "Edit Category",
+    "deleteCategory": "Delete Category",
+    "categoryName": "Category Name",
+    "allowRecurring": "Allow Recurring",
+    "allowRecurringHelp": "Allow expenses in this category to be marked as recurring",
+    "categoryHasExpenses": "This category has expenses",
+    "moveExpenses": "Move expenses to another category",
+    "deleteExpenses": "Delete all expenses in this category",
+    "selectCategory": "Select category",
+    "noCategories": "No expense categories have been created yet",
+    "confirmDeleteCategory": "Are you sure you want to delete this category?"
+  },
   "messages": {
     "carAdded": "Car added successfully",
     "carUpdated": "Car updated successfully",
@@ -191,6 +239,12 @@
     "maintenanceAdded": "Maintenance record added successfully",
     "maintenanceUpdated": "Maintenance record updated successfully",
     "maintenanceDeleted": "Maintenance record deleted successfully",
+    "expenseAdded": "Expense added successfully",
+    "expenseUpdated": "Expense updated successfully",
+    "expenseDeleted": "Expense deleted successfully",
+    "categoryAdded": "Category added successfully",
+    "categoryUpdated": "Category updated successfully",
+    "categoryDeleted": "Category deleted successfully",
     "errorOccurred": "An error occurred",
     "confirmDelete": "Are you sure you want to delete this item?",
     "confirmEdit": "Are you sure you want to edit this item?"
