--- a/frontend/src/i18n/en.json
+++ b/frontend/src/i18n/en.json
@@ -71,7 +71,9 @@
     "maintenanceRecords": "Maintenance Records",
     "addMaintenance": "Add Maintenance",
     "editMaintenance": "Edit Maintenance",
-    "totalMaintenanceCost": "Total Maintenance Cost"
+    "totalMaintenanceCost": "Total Maintenance Cost",
+    "car": "car",
+    "cars": "cars"
   },
   "maintenance": {
     "title": "Maintenance",
@@ -86,6 +88,8 @@
     "deleteRecord": "Delete Record",
     "noRecords": "No maintenance records found",
     "allRecords": "All Maintenance Records",
+    "record": "record",
+    "records": "records",
     "car": "Car",
     "totalCost": "Total Cost"
   },
@@ -224,30 +228,49 @@
   "settings": {
     "title": "Settings",
     "expenseCategories": "Expense Categories",
+    "maintenanceCategories": "Maintenance Categories",
     "addCategory": "Add Category",
     "newCategory": "New Category",
     "editCategory": "Edit Category",
     "deleteCategory": "Delete Category",
     "categoryName": "Category Name",
+    "categoryType": "Category Type",
     "allowRecurring": "Allow Recurring",
     "allowRecurringHelp": "Allow expenses in this category to be marked as recurring",
     "categoryHasExpenses": "This category has expenses",
+    "categoryHasMaintenance": "This category has maintenance records",
     "moveExpenses": "Move expenses to another category",
+    "moveMaintenance": "Move maintenance records to another category",
     "deleteExpenses": "Delete all expenses in this category",
+    "deleteMaintenance": "Delete all maintenance records in this category",
     "selectCategory": "Select category",
     "noCategories": "No expense categories have been created yet",
+    "noMaintenanceCategories": "No custom maintenance categories have been created yet",
     "confirmDeleteCategory": "Are you sure you want to delete this category?",
     "numberOfExpenses": "Number of Expenses",
+    "numberOfMaintenance": "Number of Maintenance Records",
     "moveTransactions": "Move Expenses",
+    "moveMaintenanceRecords": "Move Maintenance Records",
+    "moveRecords": "Move Records",
     "sourceCategory": "Source Category",
     "targetCategory": "Target Category",
     "expensesToMove": "Expenses to Move",
+    "maintenanceToMove": "Maintenance Records to Move",
     "selectTargetCategory": "Please select a target category",
     "moveTransactionsHelp": "All expenses from the source category will be moved to the selected target category.",
+    "moveMaintenanceHelp": "All maintenance records from the source category will be moved to the selected target category.",
     "deleteWarning": "You need to decide what to do with the expenses in this category before deleting it.",
+    "deleteMaintenanceWarning": "You need to decide what to do with the maintenance records in this category before deleting it.",
     "moveExpensesFirst": "Move expenses to another category first (opens move form)",
+    "moveMaintenanceFirst": "Move maintenance records to another category first (opens move form)",
     "openMoveForm": "Open Move Form",
-    "categoryEmpty": "This category is empty - no expenses to move"
+    "categoryEmpty": "This category is empty - no expenses to move",
+    "maintenanceCategoryEmpty": "This category is empty - no maintenance records to move",
+    "defaultCategory": "Default Category",
+    "customCategory": "Custom Category",
+    "readOnly": "Read Only",
+    "category": "category",
+    "categories": "categories"
   },
   "messages": {
     "carAdded": "Car added successfully",
@@ -256,6 +279,7 @@
     "maintenanceAdded": "Maintenance record added successfully",
     "maintenanceUpdated": "Maintenance record updated successfully",
     "maintenanceDeleted": "Maintenance record deleted successfully",
+    "recordsMoved": "Records moved successfully",
     "expenseAdded": "Expense added successfully",
     "expenseUpdated": "Expense updated successfully",
     "expenseDeleted": "Expense deleted successfully",
