--- a/frontend/src/i18n/ar.json
+++ b/frontend/src/i18n/ar.json
@@ -112,6 +112,7 @@
     "total": "المجموع",
     "date": "التاريخ",
     "actions": "الإجراءات",
+    "accessDenied": "تم رفض الوصول",
     "retry": "إعادة المحاولة",
     "select": "اختر",
     "clear": "مسح",
