Added user management

--- a/frontend/src/i18n/ar.json
+++ b/frontend/src/i18n/ar.json
@@ -235,6 +235,30 @@
     "readOnly": "للقراءة فقط",
     "category": "فئة",
     "categories": "فئات",
+    "userManagement": "إدارة المستخدمين",
+    "users": "المستخدمون",
+    "addUser": "إضافة مستخدم",
+    "newUser": "مستخدم جديد",
+    "editUser": "تعديل المستخدم",
+    "deleteUser": "حذف المستخدم",
+    "userEmail": "البريد الإلكتروني",
+    "userFirstName": "الاسم الأول",
+    "userLastName": "اسم العائلة",
+    "userRole": "الدور",
+    "userCreatedAt": "تم الإنشاء في",
+    "noUsers": "لم يتم إنشاء مستخدمين بعد",
+    "confirmDeleteUser": "هل أنت متأكد من أنك تريد حذف هذا المستخدم؟",
+    "userPassword": "كلمة المرور",
+    "selectRole": "اختر الدور",
+    "owner": "المالك",
+    "manager": "المدير",
+    "operator": "المشغل",
+    "cannotDeleteSelf": "لا يمكنك حذف حسابك الخاص",
+    "cannotChangeSelfRole": "لا يمكنك تغيير دورك من المالك",
+    "user": "مستخدم",
+    "userDeleted": "تم حذف المستخدم بنجاح",
+    "userAdded": "تم إضافة المستخدم بنجاح",
+    "userUpdated": "تم تحديث المستخدم بنجاح",
     "addCategory": "إضافة فئة",
     "newCategory": "فئة جديدة",
     "editCategory": "تعديل الفئة",
