--- a/frontend/src/i18n/es.json
+++ b/frontend/src/i18n/es.json
@@ -240,6 +240,30 @@
     "readOnly": "Solo Lectura",
     "category": "categoría",
     "categories": "categorías",
+    "userManagement": "Gestión de Usuarios",
+    "users": "Usuarios",
+    "addUser": "Agregar Usuario",
+    "newUser": "Nuevo Usuario",
+    "editUser": "Editar Usuario",
+    "deleteUser": "Eliminar Usuario",
+    "userEmail": "Correo Electrónico",
+    "userFirstName": "Nombre",
+    "userLastName": "Apellido",
+    "userRole": "Rol",
+    "userCreatedAt": "Creado el",
+    "noUsers": "No se han creado usuarios todavía",
+    "confirmDeleteUser": "¿Estás seguro de que quieres eliminar este usuario?",
+    "userPassword": "Contraseña",
+    "selectRole": "Seleccionar Rol",
+    "owner": "Propietario",
+    "manager": "Gerente",
+    "operator": "Operador",
+    "cannotDeleteSelf": "No puedes eliminar tu propia cuenta",
+    "cannotChangeSelfRole": "No puedes cambiar tu propio rol de propietario",
+    "user": "usuario",
+    "userDeleted": "Usuario eliminado exitosamente",
+    "userAdded": "Usuario agregado exitosamente",
+    "userUpdated": "Usuario actualizado exitosamente",
     "addCategory": "Agregar Categoría",
     "newCategory": "Nueva Categoría",
     "editCategory": "Editar Categoría",
