--- a/frontend/src/i18n/en.json
+++ b/frontend/src/i18n/en.json
@@ -276,7 +276,31 @@
     "customCategory": "Custom Category",
     "readOnly": "Read Only",
     "category": "category",
-    "categories": "categories"
+    "categories": "categories",
+    "userManagement": "User Management",
+    "users": "Users",
+    "addUser": "Add User",
+    "newUser": "New User",
+    "editUser": "Edit User",
+    "deleteUser": "Delete User",
+    "userEmail": "Email",
+    "userFirstName": "First Name",
+    "userLastName": "Last Name",
+    "userRole": "Role",
+    "userCreatedAt": "Created At",
+    "noUsers": "No users have been created yet",
+    "confirmDeleteUser": "Are you sure you want to delete this user?",
+    "userPassword": "Password",
+    "selectRole": "Select Role",
+    "owner": "Owner",
+    "manager": "Manager",
+    "operator": "Operator",
+    "cannotDeleteSelf": "Cannot delete your own account",
+    "cannotChangeSelfRole": "Cannot change your own role from owner",
+    "user": "user",
+    "userDeleted": "User deleted successfully",
+    "userAdded": "User added successfully",
+    "userUpdated": "User updated successfully"
   },
   "messages": {
     "carAdded": "Car added successfully",
