Fix multiple UI/UX issues and add attachment support to maintenance records
Frontend fixes:
- Add attachment support to MaintenancePage edit and add forms
- Fix navbar dropdown hover issue where 'Update Account' text was invisible
- Improve sidebar navigation font size and weight for better readability
- Enhance automatic logout on token expiration with faster redirect

MaintenancePage improvements:
- Add FileUpload and AttachmentList components to maintenance modal
- Support file uploads for both new and existing maintenance records
- Load and display existing attachments when editing records
- Proper attachment state management and cleanup

Storage Configuration:
- Add parentFolder field to storage config for better organization
- Update storage service to use parent folder in file paths
- Support for both demo/prod folder structures in S3 buckets

Authentication improvements:
- Faster automatic logout and redirect on token expiration (1.5s vs 2s)
- Better error handling for expired tokens across all API calls
- Consistent logout behavior for file upload operations

UI improvements:
- Fix white-on-white text issue in user dropdown hover states
- Increase sidebar navigation font size from default to 15px with 500 weight
- Better visual hierarchy and readability in navigation

--- a/frontend/src/i18n/ar.json
+++ b/frontend/src/i18n/ar.json
@@ -1,7 +1,7 @@
 {
   "app": {
     "name": "كارليدجر",
-    "title": "إدارة تمويل السيارات"
+    "title": "منصة ذكية لإدارة الوكالات"
   },
   "auth": {
     "login": "تسجيل الدخول",
