--- a/frontend/src/i18n/ar.json
+++ b/frontend/src/i18n/ar.json
@@ -11,7 +11,13 @@
     "organization": "المؤسسة",
     "loginButton": "دخول",
     "loginError": "بيانات اعتماد غير صحيحة",
-    "loginSuccess": "تم تسجيل الدخول بنجاح"
+    "loginSuccess": "تم تسجيل الدخول بنجاح",
+    "forgotPassword": "نسيت كلمة المرور؟",
+    "resetPassword": "إعادة تعيين كلمة المرور",
+    "backToLogin": "العودة إلى تسجيل الدخول",
+    "resetInstructions": "أدخل اسم مؤسستك وعنوان بريدك الإلكتروني لتلقي كلمة مرور مؤقتة.",
+    "resetEmailSent": "إذا كان هناك حساب بهذه التفاصيل، فقد تم إرسال بريد إلكتروني لإعادة تعيين كلمة المرور.",
+    "sendResetEmail": "إرسال بريد إعادة التعيين"
   },
   "navigation": {
     "dashboard": "لوحة التحكم",
