feat: Complete car status enhancement and optimize backend startup
- Added 'in_repair' status to car workflow (pending → in_repair → in_stock → sold)
- Updated default car status from 'in_stock' to 'pending' for new cars
- Added in_repair cards to inventory and maintenance reports with date filtering
- Updated navigation from 'Cars' to 'Cars Inventory' in all languages
- Implemented smart default categories sync using file modification time tracking
- Added system_info table to track file changes and prevent unnecessary syncing
- Removed unnecessary migrations (roles, license checks, column additions)
- Optimized backend startup performance - only syncs when config actually changes
- Updated API documentation and user documentation
- Full multilingual support (English, Spanish, Arabic, French)

--- a/frontend/public/i18n/ar.json
+++ b/frontend/public/i18n/ar.json
@@ -21,7 +21,7 @@
   },
   "navigation": {
     "dashboard": "لوحة التحكم",
-    "cars": "السيارات",
+    "cars": "مخزون السيارات",
     "maintenance": "الصيانة",
     "reports": "التقارير",
     "expenses": "مصاريف الوكالة",
@@ -34,6 +34,7 @@
     "inStock": "في المخزون",
     "sold": "مباعة",
     "pending": "معلقة",
+    "inRepair": "قيد الإصلاح",
     "inventoryValue": "قيمة المخزون",
     "currentInventoryValue": "قيمة المخزون الحالية",
     "financials": "الماليات",
@@ -142,7 +143,8 @@
   "status": {
     "in_stock": "في المخزون",
     "sold": "مباعة",
-    "pending": "معلقة"
+    "pending": "معلقة",
+    "in_repair": "قيد الإصلاح"
   },
   "categories": {
     "Engine": "المحرك",
@@ -232,6 +234,7 @@
   },
   "settings": {
     "title": "الإعدادات",
+    "licenseUsage": "استخدام الترخيص",
     "expenseCategories": "فئات المصاريف",
     "maintenanceCategories": "فئات الصيانة",
     "numberOfMaintenance": "عدد سجلات الصيانة",
