--- a/frontend/src/i18n/en.json
+++ b/frontend/src/i18n/en.json
@@ -274,6 +274,11 @@
     "selectTargetCategory": "Please select a target category",
     "moveTransactionsHelp": "All expenses from the source category will be moved to the selected target category.",
     "moveMaintenanceHelp": "All maintenance records from the source category will be moved to the selected target category.",
+    "subscriptionInactive": "Subscription Inactive",
+    "subscriptionInactiveMessage": "Your subscription has been canceled. You can reactivate it anytime to continue using CarLedgr.",
+    "manageMembership": "Manage Membership",
+    "reactivateSubscription": "Reactivate your subscription, change plans, or update payment method",
+    "subscriptionRequired": "Subscription Required",
     "deleteWarning": "You need to decide what to do with the expenses in this category before deleting it.",
     "deleteMaintenanceWarning": "You need to decide what to do with the maintenance records in this category before deleting it.",
     "moveExpensesFirst": "Move expenses to another category first (opens move form)",
